# Topological-Graph-for-Single-Cell-Transitions

./: .gitignore  CITATION.cff  README.md  index.html
code/: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-optional-gpu.txt
code/.github/workflows/: smoke.yml
code/configs/: full.yaml  smoke.yaml
code/scripts/: audit_claims.py  make_figures.py  make_tables.py  run.py
code/src/stdd/: __init__.py  audit.py  config.py  conformal.py  foundations.py  graph.py  ingest.py  metrics.py  operators.py  persistence.py  plotting.py  policy.py  reproduce.py  runner.py  seed.py  splits.py  synthetic.py  theory.py
code/src/topocell/: __init__.py  config.py  foundations.py  plotting.py  reproduce.py  runner.py  synthetic.py
code/tests/: test_betti_monotonic.py  test_conformal.py  test_metrics.py  test_operators.py  test_persistence.py  test_splits.py  test_synthetic.py
submission/: README.md  main.tex  refs.bib
submission/code/: CITATION.cff  Makefile  README.md  THEORY.txt  pyproject.toml  requirements.txt
submission/code/configs/: full.yaml  smoke.yaml
submission/code/results/: extended_results.tex  main_results.md  main_results.tex  summary.json
submission/code/scripts/: _bootstrap.py  audit_claims.py  make_figures.py  make_tables.py  reproduce_all.sh  run.py
submission/code/src/topocell/: __init__.py  audit.py  config.py  conformal.py  graph.py  ingest.py  metrics.py  operators.py  persistence.py  plotting.py  policy.py  reproduce.py  runner.py  seed.py  splits.py  synthetic.py
submission/code/src/topocell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
submission/code/tests/: test_betti_monotonic.py  test_conformal.py  test_metrics.py  test_persistence.py  test_splits.py  test_synthetic.py
submission/tables/: main_results.tex
