[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "topocell"
version = "0.1.0"
description = "Topological graph learning for single-cell state transitions: label propagation on a kNN cell graph with topology-aware active sampling under leakage-controlled splits"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Molena Huynh", email = "molena.huynh@jmp.com" }]
keywords = [
  "single-cell",
  "cell-state-transitions",
  "label-propagation",
  "knn-graph",
  "topological-data-analysis",
  "active-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
  "networkx>=3.0,<4",
  "scikit-learn>=1.2,<2",
  "matplotlib>=3.6,<4",
  "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
gpu = ["torch>=2.0,<3"]
dev = ["pytest>=7.0,<9", "build>=1.0,<2", "twine>=5.0,<7"]

[project.scripts]
topocell-reproduce = "topocell.reproduce:main"

[project.urls]
Homepage = "https://github.com/thmolena/P4-Topological-Graph-RL-for-Single-Cell-Transitions"
Repository = "https://github.com/thmolena/P4-Topological-Graph-RL-for-Single-Cell-Transitions"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
