[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "topocell"
version = "0.2.0"
description = "Spectral-truncated, pseudotime-directed (noncommutative) graph operators for single-cell state-transition forecasting and rare-state recovery"
readme = { text = "Spectral-truncated noncommutative graph operators for few-label single-cell transition forecasting and rare-state recovery", content-type = "text/plain" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Molena Huynh" }]
dependencies = [
  "numpy>=1.24", "scipy>=1.10", "networkx>=3.0",
  "scikit-learn>=1.2", "matplotlib>=3.6", "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
topocell-reproduce = "topocell.reproduce:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
