[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stdd"
version = "0.2.0"
description = "Spectral-truncated, drive-directed (noncommutative) graph operators for inductive quantum-phase classification across a control-parameter sweep"
readme = { text = "Directed spectral-truncated operators for inductive classification of quantum phases across a control-parameter sweep, from classical-shadow features.", content-type = "text/plain" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Molena Huynh" }]
dependencies = [
  "numpy>=1.24", "scipy>=1.10", "networkx>=3.0",
  "scikit-learn>=1.2", "matplotlib>=3.6", "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
stdd-reproduce = "stdd.reproduce:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
